# uav-path

./: .gitignore
doc/: abstract.tex  bib.tex  conclusion.tex  front_page.tex  main.lof  main.tex  preface.tex  sources.bib
doc/controller/: controller.tex  controller_sim.tex
doc/implementation/: UAV_model.tex  acado_code.tex  acado_toolkit.tex  implementation.tex  mpc.tex  mpc_code.tex  mpc_script.cpp  optimization.tex  optimization_problem.tex  parameters.tex  path.cpp  pathgen.tex  predict_path_fig.tex  run_mpc.cpp  simenv.tex  sitl.tex  sitl_overview.xml  sys_overview.xml  system.tex  trim_states.tex
doc/introduction/: abstract.tex  contributions.tex  hyperspectral.tex  intro_fig.tex  introduction.tex  norwegian_abstract.tex  optimization.tex  preface.tex  related.tex  thesis_outline.tex
doc/kinematic/: kinematic.tex  kinematic_figure.tex  kinematic_figure_fov.tex  kinematics.tex
doc/literature/: heading_controller.tex  hyperspectral.tex  introduction.tex  literature.tex  path_planner.tex  ratc.tex  summary.tex
doc/opteq/: main_opteq.tex  opteq.tex
doc/outroduction/: conclusion.tex  discussion.tex
doc/path/: dubins_reference.eps  path.tex  path_algo.tex  path_alter.tex  path_sim.tex
doc/results/: 180_degree.tex  70_degree.tex  90_degree.tex  gentle_path.tex  height.tex  horizon.tex  optimized_paths.tex  path.tex  simulation.tex  stepsize.tex
doc/simulation/: path_los.tex  simulation.tex
doc/theory/: camera_footprint.tex  discretization.tex  kinematic_edge_points_figure.tex  kinematics.tex  kinematics_footprint_figure.tex  lsq_fig.tex  model.tex  mpc_method.tex  nonlinear_model.tex  objective_function.tex  offline_intervalwise.tex  opt_fig.tex  optimization.tex  problem_definition.tex  reference_frames.tex  theory.tex
old/models/: trim_sys.slx
project/doc/: NTNU_logo.eps  abstract.tex  conclusion.tex  main.tex  main.toc
results/path/: altered_vs_flown.eps  flown_path.m  (+13 more)
src/: R_z.m  computeGainsAerosonde.m  dubinsPath.m  pathgen_curved.m
src/model/: CMakeLists.txt  aerosonde_param.hpp  lateral.cpp  longitudinal.cpp  model.cpp  path.txt  plot_results_path_follower.m
src/model/results/: output.m
src/mpc/: CMakeLists.txt  mpc_script.cpp  mpc_script.hpp  path.cpp  path.hpp  path_curved.txt  path_curved2.txt  path_straight.txt  plot_results_path_follower.m  run_mpc.cpp
src/mpc/results/: results.m  results_0_2.m  results_90.m  results_turns.m  results_turns_2.m
src/path_planner/: CMakeLists.txt  aerosonde_param.hpp  dynamics.cpp  dynamics.hpp  optimize_path.cpp  optimize_path.hpp  path.txt  path_follower.cpp  path_gamma_chi.cpp  path_planner.cpp  path_straight.txt  path_vector.cpp  path_vector.hpp  plot_results_path_follower.m  run_this.cpp  vector_path.txt  x8_param.hpp
trials/: creatArc.m  kinematic_output.eps  kinematics.m  test_dubin.m  test_kinematics.m
(+503 files in other folders)
